--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <img
                   alt="backpack"
                   class="object-cover object-top w-full h-full block"
-                  src="/Images/backpack.webp"
+                  src="Images/backpack.webp"
                 />
               </a>
               <div class="mt-4">
@@ -138,7 +138,7 @@
                 <img
                   alt="waterbottle"
                   class="object-cover object-top w-full h-full block"
-                  src="/Images/bottle.jpg"
+                  src="Images/bottle.jpg"
                 />
               </a>
               <div class="mt-4">
@@ -170,7 +170,7 @@
                 <img
                   alt="pencilcase"
                   class="object-cover object-center w-full h-full block"
-                  src="/Images/pouch.avif"
+                  src="Images/pouch.avif"
                 />
               </a>
               <div class="mt-4">
@@ -202,7 +202,7 @@
                 <img
                   alt="ecommerce"
                   class="object-cover object-top w-full h-full block"
-                  src="/Images/shoes.webp"
+                  src="Images/shoes.webp"
                 />
               </a>
               <div class="mt-4">
@@ -234,7 +234,7 @@
                 <img
                   alt="ecommerce"
                   class="object-cover object-bottom w-full h-full block"
-                  src="/Images/pens.webp"
+                  src="Images/pens.webp"
                 />
               </a>
               <div class="mt-4">
@@ -266,7 +266,7 @@
                 <img
                   alt="ecommerce"
                   class="object-cover object-center w-full h-full block"
-                  src="/Images/penstand.webp"
+                  src="Images/penstand.webp"
                 />
               </a>
               <div class="mt-4">
@@ -298,7 +298,7 @@
                 <img
                   alt="ecommerce"
                   class="object-cover object-center w-full h-full block"
-                  src="/Images/notebooks.avif"
+                  src="Images/notebooks.avif"
                 />
               </a>
               <div class="mt-4">
@@ -330,7 +330,7 @@
                 <img
                   alt="ecommerce"
                   class="object-cover object-center w-full h-full block"
-                  src="/Images/umbrella.png"
+                  src="Images/umbrella.png"
                 />
               </a>
               <div class="mt-4">
